# scraping-hub

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  VERSION  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.scheduler.yml  ecosystem.config.js  erros.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.claude/skills/: SKILLS_INDEX.md
.github/: dependabot.yml
.github/workflows/: apply-migration.yml  audit-graphs.yml  ci.yml  deploy.yml  run-enrichment.yml  run-extended-enrichment.yml
api/: __init__.py  audit.py  auth.py  email_service.py  encryption.py  main.py  seed.py  verification.py
api/agent/: __init__.py  intent_parser.py  models.py  query_builder.py  response_formatter.py  router.py  session_manager.py
api/auth/: __init__.py  audit_service.py  auth_controller.py  auth_middleware.py  auth_service.py  email_service.py  field_encryption.py  seed.py  (+3 more)
backend/: .dockerignore  .npmrc  Dockerfile  README.md  package-lock.json  package.json
config/: __init__.py  settings.py
database/: migration_002_keywords.sql  migration_add_permissions.sql  schema.sql  schema_dimensional.sql  schema_star.sql  schema_v2.sql
deploy/: iconsai-scraping.service  nginx.conf  scraping-hub.service  setup.sh
docs/: # SYSTEM PROMPT — Atlas: Agente Intelige.ini  ARCHITECTURE_CURRENT.md  ATLAS_ORIGINAL_PROMPT.md  RUNBOOK-DEPLOY.md  runbook-prod.md  tutorial-context-engineering-emendas.md
frontend/: FAVICON-SETUP.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
mcp_servers/: README.md  __init__.py  base_mcp.py  config.py
scheduler/: Dockerfile  __init__.py  collector.py  emendas_subnacionais_collector.py
scripts/: add_version_endpoints.py  apply_migration_008.py  apply_migration_009.py  apply_migration_010.py  apply_migration_011.py  apply_migration_012.py  apply_migration_013.py  apply_migration_014.py  apply_migration_015.py  apply_migration_015_stats_historico.py  apply_migration_016.py  apply_migration_017_messaging_logs.py  apply_migration_019_readd_cidade_estado.py  apply_migration_021_search.py  apply_migration_022_query_optimization.py  apply_migration_049_news_credibility.py  apply_migration_052_hybrid_search.py  apply_migration_auth_address.py  apply_migration_auth_fix.py  apply_migration_auth_level1.py  audit_graphs.py  brasil_api_collector.py  check-dev-ports.sh  classify_news_batch.js  clean-dev-stack.sh  deploy_compose.sh  dev-server.sh  enrich_news_batch.js  etl_financas_municipios.py  etl_pib_municipios.py  etl_saneamento_censo2022.py  extract_pessoas.py  fase1_sanitizacao.sql  fase2_audit.sql  fase2_sanitizacao.sql  import_json_to_supabase.py  mass_collector.py  migrate_dimensional.py  migrate_fontes_dados.py  migrate_star_schema.py  (+15 more)
src/: __init__.py  main.py
static/: admin.html  dashboard.html  index.html
tests/: __init__.py  compat_client.py  conftest.py  test_agent.py  test_api.py  test_auth_permissions.py  test_health.py  test_scrapers.py  test_services.py
(+329 files in other folders)
